--- a/baiyan-ddd-infrastructure/pom.xml
+++ b/baiyan-ddd-infrastructure/pom.xml
@@ -33,6 +33,10 @@
             <groupId>com.alibaba</groupId>
             <artifactId>druid-spring-boot-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
